cabal-version:      2.4
name:               fused-effects-password-example
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             EMQ-YangM
maintainer:         yangm@emqx.io

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  MyLib
                    , CryptoHash
                    , Types
                    , KVStore
                    , KVStoreImplPure
                    , KVStoreImplSQLite

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
                    , fused-effects

                    , bytestring 
                    , cryptonite 
                    , memory 
                    , sqlite-simple 
                    , containers 

    hs-source-dirs:   src
    default-language: Haskell2010

executable fused-effects-password-example
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        fused-effects-password-example

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite fused-effects-password-example-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.14.3.0
